--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom": "^20.0.3",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
+    "otpauth": "^9.0.2",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
