--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.12",
@@ -42,6 +43,7 @@
     "npm-run-all": "^4.1.5",
     "otpauth": "^9.0.2",
     "prettier": "^2.7.1",
+    "qrcode": "^1.5.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
