--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm-run-all": "^4.1.5",
     "otpauth": "^9.0.2",
     "prettier": "^2.7.1",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
