--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.12",
+    "@types/uuid": "^9.0.0",
     "@vicons/antd": "^0.12.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fa": "^0.12.0",
@@ -46,6 +47,7 @@
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.1",
     "typescript": "~4.7.4",
+    "uuid": "^9.0.0",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
