--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.12.0",
     "@vueuse/math": "^9.12.0",
+    "detectrtc": "^1.4.1",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
