--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "~4.7.4",
     "uuid": "^9.0.0",
     "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
   }
