--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.12.0",
+    "@vueuse/head": "^1.0.24",
     "@vueuse/math": "^9.12.0",
     "detectrtc": "^1.4.1",
     "eslint": "^8.22.0",
